# agent-capstone

./: .dockerignore  .gitignore  Dockerfile  README.md  SESSION_SERVICE_EXPLANATION.md  app.py  docker_readme.md  pyproject.toml  requirements.txt  submission_description.md
app/: __init__.py
app/agents/: __init__.py  mcq_refinement.py  pipeline.py
app/core/: __init__.py  app.py  llm_manager.py  openai_llm.py  runner.py  session.py
app/db/: __init__.py  database.py  models.py
app/services/: __init__.py  gemini_image_service.py  gemini_mcq_service.py  ingestion_service.py  kb_service.py  media_service.py  pdf_section_parser.py  pubmed_service.py
app/tools/: __init__.py  kb_tools.py  provenance_tools.py  pubmed_tools.py  schema_validator.py  tavily_search.py
app/ui/: __init__.py  gradio_app.py
plan/UI/: ui_plan.md
plan/docs/: tips.md
plan/framework/: agent_examples.txt  framework.txt
